--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,6 @@ before_install:
   - tar -czf resources.tar.gz resources/
   - docker build -t dnanexus/parliament2:$TAG .
   - docker tag dnanexus/parliament2:$TAG dnanexus/parliament2
-  - docker save dnanexus/parliament2 -o dx_app_code/parliament2/resources/parliament2_image.tar
 
 jobs:
   include:
@@ -29,6 +28,7 @@ jobs:
     - script: sudo bash test_scripts/delly_inversion_test.sh
     - script: sudo bash test_scripts/lumpy_test.sh
     - script: sudo bash test_scripts/manta_test.sh
+    - script: sudo bash test_scripts/svviz_test.sh
     - script: sudo bash test_scripts/full_small_test.sh
 
 branches:
