--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ before_install:
   - sudo pip install --user urllib3[secure] --upgrade
   - tar -czf resources.tar.gz resources/
   - docker build -t dnanexus/parliament2:$TAG .
-  - docker tag dnanexus/parliament2:$TAG dnanexus/parliament2
+  - docker tag dnanexus/parliament2:$TAG dnanexus/parliament2:latest
+  - docker push dnanexus/parliament2:latest
   - sudo bash test/set_up_tests.sh
 
 jobs:
