Changing build order to avoid pushing the Docker image many times

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,21 +10,18 @@ env:
 before_install:
   - sudo apt-get update && sudo apt-get install --only-upgrade openssl
   - sudo pip install --user urllib3[secure] --upgrade
-  - tar -czf resources.tar.gz resources/
-  - docker build -t dnanexus/parliament2:$TAG .
-  - docker tag dnanexus/parliament2:$TAG dnanexus/parliament2:latest
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && docker push dnanexus/parliament2:latest
-  - sudo bash test/set_up_tests.sh
-
-deploy:
-  provider: script
-  script: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && docker push dnanexus/parliament2:$TAG
-  on:
-    branch: master
 
 jobs:
   include:
-    - script: docker run dnanexus/parliament2:$TAG -q -h
+    - stage: build docker image
+      script:
+        - tar -czf resources.tar.gz resources/
+        - docker build -t dnanexus/parliament2:$TAG .
+        - docker tag dnanexus/parliament2:$TAG dnanexus/parliament2:latest
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && docker push dnanexus/parliament2:latest
+        - sudo bash test/set_up_tests.sh
+    - stage: testing
+      script: docker run dnanexus/parliament2:$TAG -q -h
     - script: docker run -v /home/dnanexus/in:/home/dnanexus/in -v /home/dnanexus/out:/home/dnanexus/out dnanexus/parliament2:$TAG --bam /home/dnanexus/in/small_input.bam --bai /home/dnanexus/in/small_input.bai --ref_genome /home/dnanexus/in/ref.fa.gz --fai /home/dnanexus/in/ref.fa.fai --prefix breakdancer --breakdancer && ls -sh /home/dnanexus/out
     - script: docker run -v /home/dnanexus/in:/home/dnanexus/in -v /home/dnanexus/out:/home/dnanexus/out dnanexus/parliament2:$TAG --bam /home/dnanexus/in/small_input.bam --ref_genome /home/dnanexus/in/ref.fa.gz --fai /home/dnanexus/in/ref.fa.fai --prefix breakseq --breakseq && ls -sh /home/dnanexus/out
     - script: docker run -v /home/dnanexus/in:/home/dnanexus/in -v /home/dnanexus/out:/home/dnanexus/out dnanexus/parliament2:$TAG --bam /home/dnanexus/in/small_input.bam --bai /home/dnanexus/in/small_input.bai --ref_genome /home/dnanexus/in/ref.fa.gz --prefix cnvnator --cnvnator && ls -sh /home/dnanexus/out
@@ -36,6 +33,12 @@ jobs:
     - script: docker run -v /home/dnanexus/in:/home/dnanexus/in -v /home/dnanexus/out:/home/dnanexus/out dnanexus/parliament2:$TAG --bam /home/dnanexus/in/small_input.bam --bai /home/dnanexus/in/small_input.bai --ref_genome /home/dnanexus/in/ref.fa.gz --fai /home/dnanexus/in/ref.fa.fai --prefix manta --manta && ls -sh /home/dnanexus/out
     - script: docker run -v /home/dnanexus/in:/home/dnanexus/in -v /home/dnanexus/out:/home/dnanexus/out dnanexus/parliament2:$TAG --bam /home/dnanexus/in/small_input.bam --bai /home/dnanexus/in/small_input.bai --ref_genome /home/dnanexus/in/ref.fa.gz --fai /home/dnanexus/in/ref.fa.fai --prefix svviz --breakdancer --svviz && ls -sh /home/dnanexus/out
     - script: docker run -v /home/dnanexus/in:/home/dnanexus/in -v /home/dnanexus/out:/home/dnanexus/out dnanexus/parliament2:$TAG --bam /home/dnanexus/in/small_input.bam --bai /home/dnanexus/in/small_input.bai --ref_genome /home/dnanexus/in/ref.fa.gz --fai /home/dnanexus/in/ref.fa.fai --prefix full --breakdancer --breakseq --cnvnator --delly_deletion --delly_duplication --delly_insertion --delly_inversion --lumpy --manta && ls -sh /home/dnanexus/out
+
+deploy:
+  provider: script
+  script: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && docker push dnanexus/parliament2:$TAG
+  on:
+    branch: master
 
 branches:
   except:
