--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,16 @@ env:
 before_install:
   - sudo apt-get update && sudo apt-get install --only-upgrade openssl
   - sudo pip install --user urllib3[secure] --upgrade
+  - tar -czf resources.tar.gz resources/
+  - docker build -t dnanexus/parliament2:$TAG .
+  - sudo bash test/set_up_tests.sh
 
 jobs:
   include:
-    - stage: build docker image
+    - stage: push docker image
       script:
-        - tar -czf resources.tar.gz resources/
-        - docker build -t dnanexus/parliament2:$TAG .
         - docker tag dnanexus/parliament2:$TAG dnanexus/parliament2:latest
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && docker push dnanexus/parliament2:latest
-        - sudo bash test/set_up_tests.sh
     - stage: testing
       script: docker run dnanexus/parliament2:$TAG -q -h
     - script: docker run -v /home/dnanexus/in:/home/dnanexus/in -v /home/dnanexus/out:/home/dnanexus/out dnanexus/parliament2:$TAG --bam /home/dnanexus/in/small_input.bam --bai /home/dnanexus/in/small_input.bai --ref_genome /home/dnanexus/in/ref.fa.gz --fai /home/dnanexus/in/ref.fa.fai --prefix breakdancer --breakdancer && ls -sh /home/dnanexus/out
