Add ROC curve to training outputs

--- a/dx_app_code/parliament2_train_recalibrator/dxapp.json
+++ b/dx_app_code/parliament2_train_recalibrator/dxapp.json
@@ -84,6 +84,7 @@
     "execDepends": [
       {"package_manager": "pip", "name": "sklearn"},
       {"package_manager": "pip", "name": "pydotplus"},
+      {"name": "python-matplotlib"},
       {"name": "graphviz"}
     ]
   },
