--- a/dx_app_code/parliament2_train_recalibrator/dxapp.json
+++ b/dx_app_code/parliament2_train_recalibrator/dxapp.json
@@ -80,13 +80,7 @@
         "hours": 48
       }
     },
-    "distribution": "Ubuntu",
-    "execDepends": [
-      {"package_manager": "pip", "name": "sklearn"},
-      {"package_manager": "pip", "name": "pydotplus"},
-      {"name": "python-matplotlib"},
-      {"name": "graphviz"}
-    ]
+    "distribution": "Ubuntu"
   },
   "access": {
     "network": [
