--- a/dx_app_code/parliament2/dxapp.json
+++ b/dx_app_code/parliament2/dxapp.json
@@ -271,15 +271,10 @@
       "doi:10.1186/s12864-015-1479-3"
     ],
     "upstreamAuthor": "Baylor College of Medicine",
-    "whatsNew": "* 0.1.9: Add more logging functionality; resolved bug breaking SVVIZ; improved documentation; migrate to all regions; more sophisticated BAM storage management; other bug fixes.\n* 0.1.8: Add optional upload of log files; update SURVIVOR; add quality scores; improved error messaging; bug fixes.\n* 0.1.7: Update CNVnator, SVTyper; bug fixes.\n* 0.1.6: Bug fixes.\n* 0.1.5: Dockerized Parliament2.\n* 0.1.0: Adding Parliament2."
+    "whatsNew": "* 0.1.10: Resolved bug breaking SVTyper; added Singularity functionality; modify run on DNAnexus. * 0.1.9: Add more logging functionality; resolved bug breaking SVVIZ; improved documentation; migrate to all regions; more sophisticated BAM storage management; other bug fixes.\n* 0.1.8: Add optional upload of log files; update SURVIVOR; add quality scores; improved error messaging; bug fixes.\n* 0.1.7: Update CNVnator, SVTyper; bug fixes.\n* 0.1.6: Bug fixes.\n* 0.1.5: Dockerized Parliament2.\n* 0.1.0: Adding Parliament2."
   },
   "regionalOptions": {
     "aws:us-east-1": {
-      "assetDepends": [
-        {
-          "id": "record-FVVf3Zj0fX4Vb7P260Zyvy6y"
-        }
-      ],
       "systemRequirements": {
         "*": {
           "instanceType": "mem1_ssd1_x16"
@@ -287,14 +282,6 @@
       }
     },
     "aws:cn-north-1": {
-      "assetDepends": [
-        {
-          "project": "project-F3vk1f02GyKbj2JF0q1kQfV3",
-          "folder": "/parliament2/",
-          "name": "parliament2:0.1.9",
-          "version": "0.0.1"
-        }
-      ],
       "systemRequirements": {
         "*": {
           "instanceType": "mem1_ssd1_x16"
@@ -302,14 +289,6 @@
       }
     },
     "aws:ap-southeast-2": {
-      "assetDepends": [
-        {
-          "project": "project-F4gVXbj5qkxXq3v038V7qjxq",
-          "folder": "/parliament2/",
-          "name": "parliament2:0.1.9",
-          "version": "0.0.1"
-        }
-      ],
       "systemRequirements": {
         "*": {
           "instanceType": "mem1_ssd1_x16"
@@ -317,14 +296,6 @@
       }
     },
     "aws:eu-central-1": {
-      "assetDepends": [
-        {
-          "project": "project-FPXF2x84qJf3P5Fx8qpBZk1y",
-          "folder": "/",
-          "name": "parliament2:0.1.9",
-          "version": "0.0.1"
-        }
-      ],
       "systemRequirements": {
         "*": {
           "instanceType": "mem1_ssd1_x16"
@@ -332,14 +303,6 @@
       }
     },
     "azure:westus": {
-      "assetDepends": [
-        {
-          "project": "project-F3vk1q09FX8Jxxp20pq6z8P9",
-          "folder": "/parliament2/",
-          "name": "parliament2:0.1.9",
-          "version": "0.0.1"
-        }
-      ],
       "systemRequirements": {
         "*": {
           "instanceType": "azure:mem2_ssd1_x16"
